Actualización fuentes de imagenes
Se mudaron al servidor de cix pagina cixtelecom.net los sources de los iconos sociales y el profile logo.

--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
   </tr>
   <tr>
     <td colspan="2" ALIGN="right" WIDTH="50%">
-    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQi3es524NRedsrR_jNzz0skekEMzVMvXGEjQ&amp;usqp=CAU"
+    <img src="https://cixtelecom.net/img/profile.png"
     alt="Foto" style="height: 140px; margin-right: 10px;">
     </td>
     <td colspan="2" WIDTH="50%">
@@ -188,27 +188,27 @@
    <th>
     <td>
     <a href="https://www.facebook.com/cixve">
-      <img src="https://cdn2.hubspot.net/hubfs/53/tools/email-signature-generator/icons/facebook-icon-2x.png" alt="facebook" style="background-color: rgb(15, 8, 156); width: 30px; display: block;"/>
+      <img src="https://cixtelecom.net/img/facebook-icon-2x.webp" alt="facebook" style="background-color: rgb(15, 8, 156); width: 30px; display: block;"/>
     </a>
     </td>
    </th>
    <th>
     <td>
       <a href="https://twitter.com/cixve">
-        <img src="https://cdn2.hubspot.net/hubfs/53/tools/email-signature-generator/icons/twitter-icon-2x.png" alt="twitter" style="background-color: rgb(15, 8, 156); width: 30px; display: block;"/>
+        <img src="https://cixtelecom.net/img/twitter-icon-2x.webp" alt="twitter" style="background-color: rgb(15, 8, 156); width: 30px; display: block;"/>
       </a>  
    </td>
    </th>
    <th>
     <td>
       <a href="https://linkedin.com/company/cixve">
-        <img src="https://cdn2.hubspot.net/hubfs/53/tools/email-signature-generator/icons/linkedin-icon-2x.png" alt="twitter" style="background-color: rgb(15, 8, 156); width: 30px; display: block;"/>
+        <img src="https://cixtelecom.net/img/linkedin-icon-2x.webp" alt="twitter" style="background-color: rgb(15, 8, 156); width: 30px; display: block;"/>
     </td>
    </th>
    <th>
     <td>
       <a href="https://instagram.com/cixve">
-      <img src="https://cdn2.hubspot.net/hubfs/53/tools/email-signature-generator/icons/instagram-icon-2x.png" alt="twitter" style="background-color: rgb(15, 8, 156); width: 30px; display: block;"/>
+      <img src="https://cixtelecom.net/img/instagram-icon-2x.webp" alt="twitter" style="background-color: rgb(15, 8, 156); width: 30px; display: block;"/>
     </td>
    </th>
    <th width="31%"></th>
