Cambio de fondo Tabla de datos personales
Se agrego un bgcolor fijo #ffffff para evitar distorción o poca visualización de la firma en interfaces dark.

--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
 <tr height="50px">
     <td width="30%"></td>
     <td colspan="2">
-   <table width="100%">
+   <table width="100%" bgcolor="#ffffff">
    <th width="31%"></th>
    <th>
     <td>
